@@ -1,3 +1,9 @@
+2003-01-24  Murray Cumming  <murrayc@usa.net>
+
+	* gtk/gtkmm/menu_elems.cc: Element::Element(MenuItem): Use the
+	Glib::RefPtr<> constructor explicitly, for clarity, and do the
+	necessary extra ref - fixes lifetime bug 104194
+
 2003-01-23  Murray Cumming  <murrayc@usa.net>
 
 	* More TODOs:
